# compute

./: Cargo.toml
src/: binding.rs  buffer.rs  gpu.rs  help.md  lib.rs  lighting.wgsl  main.rs  ray_generation.wgsl  ray_intersection.wgsl  shader.rs  shader.wgsl  shader_2.wgsl
src/gpu_compute/: binding.rs  buffer.rs  data.rs  gpu.rs  mod.rs  shader.rs
