[package]
name = "compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18.0"
pollster = "0.3.0"
env_logger = "0.10.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
itertools = "0.12.0"
